# pyOpenSourceProjects

./: 404.html  AGENTS.md  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
osprojects/: action_log.py  check_project.py  checkos.py  git_api.py  github_api.py  gitlab_api.py  osproject.py  version.py
search/: search_index.json
tests/: basetest.py  test_github.py  test_github_api.py  test_gitlog2wiki.py  test_osproject.py
